// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageHeader> should match the snapshot 1`] = `
<DocumentFragment>
  <header
    class="mb-3 text-center sm:text-left"
  >
    <span
      class="page-title"
    >
      Librum
    </span>
    <br
      class="block sm:hidden"
    />
    <small
      class="page-subtitle m-0 sm:ml-2"
    >
      Campaign Companion
    </small>
    <hr
      class="hr-fancy my-1"
    />
  </header>
</DocumentFragment>
`;

exports[`<PageHeader> when the session is authenticated should match the snapshot 1`] = `
<DocumentFragment>
  <header
    class="mb-3 text-center sm:text-left"
  >
    <span
      class="page-title"
    >
      Librum
    </span>
    <br
      class="block sm:hidden"
    />
    <small
      class="page-subtitle m-0 sm:ml-2"
    >
      Campaign Companion
    </small>
    <hr
      class="hr-fancy my-1"
    />
    <div
      class="text-left mt-2"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-user mr-1"
        data-icon="user"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"
          fill="currentColor"
        />
      </svg>
      <span
        class="hidden sm:inline"
      >
        You are currently logged in as 
      </span>
      <a
        href="/user"
      >
        Alan Bradley
      </a>
      <span
        class="float-right link-danger"
      >
        <button>
          Log Out
        </button>
      </span>
    </div>
  </header>
</DocumentFragment>
`;

exports[`<PageHeader> with navigation: component should match the snapshot 1`] = `
<DocumentFragment>
  <header
    class="mb-3 text-center sm:text-left"
  >
    <span
      class="page-title"
    >
      Librum
    </span>
    <br
      class="block sm:hidden"
    />
    <small
      class="page-subtitle m-0 sm:ml-2"
    >
      Campaign Companion
    </small>
    <nav
      class="page-navigation relative z-10"
    >
      <ul
        class="flex flex-col sm:flex-row"
      >
        <li
          class="navigation-item"
        >
          <p
            class="navigation-item-link-disabled text-muted"
          >
            Home
          </p>
        </li>
        <li
          class="navigation-item"
        >
          <a
            class="navigation-item-link"
            href="/launch-sites"
          >
            Launch Sites
          </a>
        </li>
        <li
          class="dropdown-container"
        >
          <div
            class="dropdown"
          >
            <button
              class="dropdown-label"
            >
              Rockets
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-caret-up fa-xs ml-2"
                data-icon="caret-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M182.6 137.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8H288c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-128-128z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </li>
        <li
          class="dropdown-container"
        >
          <div
            class="dropdown"
          >
            <button
              class="dropdown-label"
            >
              Administration
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-caret-up fa-xs ml-2"
                data-icon="caret-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M182.6 137.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8H288c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-128-128z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </li>
      </ul>
    </nav>
    <hr
      class="hr-fancy my-1"
    />
  </header>
</DocumentFragment>
`;

exports[`<PageHeader> with navigation: value should match the snapshot 1`] = `
<DocumentFragment>
  <header
    class="mb-3 text-center sm:text-left"
  >
    <span
      class="page-title"
    >
      Librum
    </span>
    <br
      class="block sm:hidden"
    />
    <small
      class="page-subtitle m-0 sm:ml-2"
    >
      Campaign Companion
    </small>
    <hr
      class="hr-fancy my-1 block sm:hidden"
    />
    <nav
      class="page-navigation relative z-10"
    >
      <ul
        class="flex flex-col sm:flex-row"
      >
        <li
          class="navigation-item"
        >
          <p
            class="navigation-item-link-disabled text-muted"
          >
            Home
          </p>
        </li>
        <li
          class="navigation-item"
        >
          <a
            class="navigation-item-link"
            href="/launch-sites"
          >
            Launch Sites
          </a>
        </li>
        <li
          class="dropdown-container"
        >
          <div
            class="dropdown"
          >
            <button
              class="dropdown-label"
            >
              Rockets
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-caret-up fa-xs ml-2"
                data-icon="caret-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M182.6 137.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8H288c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-128-128z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </li>
        <li
          class="dropdown-container"
        >
          <div
            class="dropdown"
          >
            <button
              class="dropdown-label"
            >
              Administration
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-caret-up fa-xs ml-2"
                data-icon="caret-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M182.6 137.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8H288c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-128-128z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </li>
      </ul>
    </nav>
    <hr
      class="hr-fancy my-1"
    />
  </header>
</DocumentFragment>
`;

exports[`<PageHeader> with subtitle: null should match the snapshot 1`] = `
<DocumentFragment>
  <header
    class="mb-3 text-center sm:text-left"
  >
    <span
      class="page-title"
    >
      Librum
    </span>
    <br
      class="block sm:hidden"
    />
    <small
      class="page-subtitle m-0 sm:ml-2"
    >
      Campaign Companion
    </small>
    <hr
      class="hr-fancy my-1"
    />
  </header>
</DocumentFragment>
`;
